--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <style>
         h2{
-            color: blue;
+            color: #000000;
         }
         p,ul,li, h6{
             text-align: justify;
