--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col-sm-6 col-md-8">
             <h2>Privacy Policy and Terms of Use</h2>
             <h4>Introduction</h4>
-            <p>Our Privacy Policy was last updated on 24th August, 2022.</p>
+            <p>Our Privacy Policy is effective from 24th August, 2022.</p>
             <p>
                 This Privacy Policy describes our policies and procedures on the collection, use and disclosure of your 
                 information when you use the service and tells you about your privacy rights and how the law protects you.
